Session 3: Java3D removal survey — complete file inventory, phase plan, caller graph
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>